--- a/Toggl.Giskard/Resources/layout/ReportsCalendarShortcutCell.axml
+++ b/Toggl.Giskard/Resources/layout/ReportsCalendarShortcutCell.axml
@@ -1,9 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<TextView
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<TextView xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    local:MvxBind="Text Title; DrawableColor CalendarShortcutBackgroundColor(Selected)"
+    android:id="@+id/ReportsCalendarShortcutTextView"
     tools:text="This week"
     android:textSize="14sp"
     android:gravity="center"
