--- a/Toggl.Giskard/Resources/layout/ReportsCalendarFragment.axml
+++ b/Toggl.Giskard/Resources/layout/ReportsCalendarFragment.axml
@@ -1,7 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
     tools:background="@color/toolbarBlack"
     android:orientation="vertical"
@@ -9,7 +7,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <TextView
-        local:MvxBind="Text Format('{0} {1}', IntToMonthName(CurrentMonth.Month), CurrentMonth.Year)"
+        android:id="@+id/ReportsCalendarCurrentMonthTitle"
         tools:text="May 2018"
         android:textSize="14sp"
         android:gravity="center_horizontal"
@@ -84,15 +82,12 @@
     </LinearLayout>
     <android.support.v4.view.ViewPager
         android:id="@+id/ReportsCalendarFragmentViewPager"
-        local:MvxBind="CurrentPage CurrentPage"
         android:minHeight="225dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <mvvmcross.droid.support.v7.recyclerview.MvxRecyclerView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/ReportsCalendarFragmentShortcuts"
-        local:MvxBind="ItemsSource QuickSelectShortcuts; ItemClick QuickSelectCommand"
         android:scrollbars="vertical"
-        local:MvxTemplateSelector="@string/CalendarShortcutsTemplateSelector"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
