--- a/Toggl.Giskard/Resources/layout/ReportsCalendarFragmentPage.axml
+++ b/Toggl.Giskard/Resources/layout/ReportsCalendarFragmentPage.axml
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<toggl.giskard.views.CalendarRecyclerView
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:local="http://schemas.android.com/apk/res-auto"
+<?xml version="1.0" encoding="utf-8"?>
+<toggl.giskard.views.CalendarRecyclerView xmlns:tools="http://schemas.android.com/tools"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    local:MvxTemplateSelector="@string/CalendarTemplateSelector"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
