--- a/Toggl.Daneel/ViewControllers/OnboardingViewController.xib
+++ b/Toggl.Daneel/ViewControllers/OnboardingViewController.xib
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_0" orientation="portrait">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="ipad12_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -29,14 +28,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="2">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+            <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bgNoiseBlue" translatesAutoresizingMaskIntoConstraints="NO" id="uQ9-8C-BGz">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                 </imageView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCB-nj-krh">
-                    <rect key="frame" x="52" y="69" width="216" height="363"/>
+                    <rect key="frame" x="256" y="351.5" width="512" height="683"/>
                     <color key="backgroundColor" red="0.054901960784313725" green="0.58823529411764708" blue="0.83529411764705885" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <userDefinedRuntimeAttributes>
                         <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
@@ -45,31 +44,31 @@
                     </userDefinedRuntimeAttributes>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cBN-Dd-JYx">
-                    <rect key="frame" x="65" y="91" width="190" height="319"/>
+                    <rect key="frame" x="269" y="373.5" width="486" height="639"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                 </view>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceHorizontal="YES" pagingEnabled="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3BO-Ic-74A">
-                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                    <rect key="frame" x="0.0" y="0.0" width="1024" height="1366"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4cy-rr-Z3l">
-                            <rect key="frame" x="0.0" y="0.0" width="1280" height="568"/>
+                            <rect key="frame" x="0.0" y="0.0" width="4096" height="1366"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0bW-s1-SME" userLabel="FirstPageLabel">
-                                    <rect key="frame" x="0.0" y="500" width="320" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="1258" width="1024" height="0.0"/>
                                     <accessibility key="accessibilityConfiguration" label="OnboardingFirstLabel"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Meo-nQ-q5D" userLabel="SecondPageLabel">
-                                    <rect key="frame" x="320" y="500" width="320" height="0.0"/>
+                                    <rect key="frame" x="1024" y="1258" width="1024" height="0.0"/>
                                     <accessibility key="accessibilityConfiguration" label="OnboardingSecondLabel"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="G9v-ES-Yia" userLabel="ThirdPageLabel">
-                                    <rect key="frame" x="640" y="500" width="320" height="0.0"/>
+                                    <rect key="frame" x="2048" y="1258" width="1024" height="0.0"/>
                                     <accessibility key="accessibilityConfiguration" label="OnboardingThirdLabel"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -78,9 +77,15 @@
                             </subviews>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
-                                <constraint firstAttribute="bottom" secondItem="G9v-ES-Yia" secondAttribute="bottom" constant="68" id="6Pq-Bs-4jm"/>
-                                <constraint firstAttribute="bottom" secondItem="0bW-s1-SME" secondAttribute="bottom" constant="68" id="PXB-XK-YzZ"/>
-                                <constraint firstAttribute="bottom" secondItem="Meo-nQ-q5D" secondAttribute="bottom" constant="68" id="Tvy-Ce-Tc5"/>
+                                <constraint firstAttribute="bottom" secondItem="G9v-ES-Yia" secondAttribute="bottom" constant="68" id="6Pq-Bs-4jm">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="108"/>
+                                </constraint>
+                                <constraint firstAttribute="bottom" secondItem="0bW-s1-SME" secondAttribute="bottom" constant="68" id="PXB-XK-YzZ">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="108"/>
+                                </constraint>
+                                <constraint firstAttribute="bottom" secondItem="Meo-nQ-q5D" secondAttribute="bottom" constant="68" id="Tvy-Ce-Tc5">
+                                    <variation key="heightClass=regular-widthClass=regular" constant="108"/>
+                                </constraint>
                                 <constraint firstItem="G9v-ES-Yia" firstAttribute="leading" secondItem="Meo-nQ-q5D" secondAttribute="trailing" id="XxN-OB-QTE"/>
                                 <constraint firstItem="0bW-s1-SME" firstAttribute="leading" secondItem="4cy-rr-Z3l" secondAttribute="leading" id="Y3I-fH-RcE"/>
                                 <constraint firstItem="Meo-nQ-q5D" firstAttribute="leading" secondItem="0bW-s1-SME" secondAttribute="trailing" id="qsG-hh-3qi"/>
@@ -100,14 +105,14 @@
                     </constraints>
                 </scrollView>
                 <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" numberOfPages="3" translatesAutoresizingMaskIntoConstraints="NO" id="KBd-Lu-7wr">
-                    <rect key="frame" x="140.5" y="507" width="39" height="37"/>
+                    <rect key="frame" x="492.5" y="1304.5" width="39" height="37"/>
                 </pageControl>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1ic-Bm-3e0">
-                    <rect key="frame" x="258" y="20" width="62" height="58"/>
+                    <rect key="frame" x="961" y="20" width="63" height="58"/>
                     <accessibility key="accessibilityConfiguration" label="OnboardingSkip"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="58" id="AjA-C0-EZA"/>
-                        <constraint firstAttribute="width" constant="62" id="yRo-Ar-xwF"/>
+                        <constraint firstAttribute="width" constant="63" id="yRo-Ar-xwF"/>
                     </constraints>
                     <fontDescription key="fontDescription" type="system" weight="medium" pointSize="11"/>
                     <state key="normal" title="SKIP">
@@ -115,7 +120,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="crr-oI-9sA">
-                    <rect key="frame" x="257" y="482" width="63" height="86"/>
+                    <rect key="frame" x="961" y="1280" width="63" height="86"/>
                     <accessibility key="accessibilityConfiguration" label="OnboardingNext"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="63" id="T3m-yw-b4e"/>
@@ -127,7 +132,7 @@
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QOR-SE-Mpp">
-                    <rect key="frame" x="0.0" y="482" width="63" height="86"/>
+                    <rect key="frame" x="0.0" y="1280" width="63" height="86"/>
                     <accessibility key="accessibilityConfiguration" label="OnboardingPrevious"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="63" id="JAS-VM-3mz"/>
@@ -141,8 +146,11 @@
             </subviews>
             <color key="backgroundColor" red="0.023529411764705882" green="0.66666666666666663" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="dSK-f7-Uvp" firstAttribute="bottom" secondItem="QOR-SE-Mpp" secondAttribute="bottom" id="0mR-Ja-1lj"/>
+                <constraint firstItem="dSK-f7-Uvp" firstAttribute="bottom" secondItem="QOR-SE-Mpp" secondAttribute="bottom" id="0mR-Ja-1lj">
+                    <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                </constraint>
                 <constraint firstItem="1ic-Bm-3e0" firstAttribute="top" secondItem="dSK-f7-Uvp" secondAttribute="top" id="1No-up-h7o"/>
+                <constraint firstItem="hCB-nj-krh" firstAttribute="centerY" secondItem="dSK-f7-Uvp" secondAttribute="centerY" id="2gf-y9-tr9"/>
                 <constraint firstAttribute="bottom" secondItem="uQ9-8C-BGz" secondAttribute="bottom" id="3F8-uh-mRB"/>
                 <constraint firstItem="KBd-Lu-7wr" firstAttribute="centerX" secondItem="2" secondAttribute="centerX" id="8at-kn-IWJ"/>
                 <constraint firstItem="dSK-f7-Uvp" firstAttribute="trailing" secondItem="uQ9-8C-BGz" secondAttribute="trailing" id="Cxo-jg-U6F"/>
@@ -152,13 +160,22 @@
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="trailing" secondItem="hCB-nj-krh" secondAttribute="trailing" constant="-13" id="Jny-ou-xWA"/>
                 <constraint firstItem="3BO-Ic-74A" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="PUe-xm-GKw"/>
                 <constraint firstItem="crr-oI-9sA" firstAttribute="top" secondItem="hCB-nj-krh" secondAttribute="bottom" constant="50" id="Q1S-pS-El3"/>
-                <constraint firstAttribute="trailing" secondItem="crr-oI-9sA" secondAttribute="trailing" id="SjV-Vk-J1r"/>
-                <constraint firstItem="dSK-f7-Uvp" firstAttribute="bottom" secondItem="crr-oI-9sA" secondAttribute="bottom" id="U74-gr-GUw"/>
+                <constraint firstItem="hCB-nj-krh" firstAttribute="height" secondItem="2" secondAttribute="height" multiplier="0.5" id="RwQ-Fz-sgI"/>
+                <constraint firstAttribute="trailing" secondItem="crr-oI-9sA" secondAttribute="trailing" id="SjV-Vk-J1r">
+                    <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="dSK-f7-Uvp" firstAttribute="bottom" secondItem="crr-oI-9sA" secondAttribute="bottom" id="U74-gr-GUw">
+                    <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="hCB-nj-krh" firstAttribute="width" secondItem="2" secondAttribute="width" multiplier="0.5" id="XHf-3V-beT"/>
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="bottom" secondItem="hCB-nj-krh" secondAttribute="bottom" constant="-22" id="Yuf-c2-Okw"/>
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="centerY" secondItem="hCB-nj-krh" secondAttribute="centerY" id="aws-4u-H1V"/>
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="leading" secondItem="hCB-nj-krh" secondAttribute="leading" constant="13" id="b11-eM-S25"/>
                 <constraint firstItem="dSK-f7-Uvp" firstAttribute="bottom" secondItem="3BO-Ic-74A" secondAttribute="bottom" id="cdm-Od-rB1"/>
-                <constraint firstItem="QOR-SE-Mpp" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="ht7-4g-Opq"/>
+                <constraint firstItem="QOR-SE-Mpp" firstAttribute="leading" secondItem="2" secondAttribute="leading" id="ht7-4g-Opq">
+                    <variation key="heightClass=regular-widthClass=regular" constant="0.0"/>
+                </constraint>
+                <constraint firstItem="hCB-nj-krh" firstAttribute="centerX" secondItem="dSK-f7-Uvp" secondAttribute="centerX" id="ihk-1w-FsF"/>
                 <constraint firstAttribute="trailing" secondItem="hCB-nj-krh" secondAttribute="trailing" constant="52" id="l4y-Al-q5D"/>
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="top" secondItem="hCB-nj-krh" secondAttribute="top" constant="22" id="r4b-51-ugG"/>
                 <constraint firstItem="cBN-Dd-JYx" firstAttribute="centerX" secondItem="hCB-nj-krh" secondAttribute="centerX" id="rlh-YM-CTY"/>
@@ -169,6 +186,26 @@
                 <constraint firstItem="3BO-Ic-74A" firstAttribute="top" secondItem="2" secondAttribute="top" id="wbU-bE-L7r"/>
             </constraints>
             <viewLayoutGuide key="safeArea" id="dSK-f7-Uvp"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="2gf-y9-tr9"/>
+                    <exclude reference="RwQ-Fz-sgI"/>
+                    <exclude reference="XHf-3V-beT"/>
+                    <exclude reference="ihk-1w-FsF"/>
+                </mask>
+            </variation>
+            <variation key="heightClass=regular-widthClass=regular">
+                <mask key="constraints">
+                    <include reference="2gf-y9-tr9"/>
+                    <exclude reference="EJV-EX-9IS"/>
+                    <exclude reference="IKT-GH-bEe"/>
+                    <include reference="RwQ-Fz-sgI"/>
+                    <include reference="XHf-3V-beT"/>
+                    <include reference="ihk-1w-FsF"/>
+                    <exclude reference="l4y-Al-q5D"/>
+                    <exclude reference="Q1S-pS-El3"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="137.5" y="53.5"/>
         </view>
     </objects>
