--- a/Toggl.Daneel.Watch/Interface.storyboard
+++ b/Toggl.Daneel.Watch/Interface.storyboard
@@ -9,10 +9,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="14460.16"/>
     </dependencies>
     <scenes>
-        <!--Interface Controller-->
+        <!--Running Time Entry Interface Controller-->
         <scene sceneID="aou-V4-d1y">
             <objects>
-                <controller id="AgC-eL-Hgc" customClass="InterfaceController">
+                <controller id="AgC-eL-Hgc" customClass="RunningTimeEntryInterfaceController">
                     <items>
                         <group width="1" alignment="left" layout="vertical" id="euJ-mG-Jkk">
                             <items>
@@ -40,7 +40,21 @@
                     </connections>
                 </controller>
             </objects>
-            <point key="canvasLocation" x="0.0" y="0.0"/>
+            <point key="canvasLocation" x="-98" y="0.0"/>
+        </scene>
+        <!--Start Time Entry Interface Controller-->
+        <scene sceneID="evB-X4-MiQ">
+            <objects>
+                <controller id="FDi-8B-izX" customClass="StartTimeEntryInterfaceController"/>
+            </objects>
+            <point key="canvasLocation" x="-98" y="303"/>
+        </scene>
+        <!--Login Interface Controller-->
+        <scene sceneID="jCF-Df-fdj">
+            <objects>
+                <controller id="vZs-Rs-luw" customClass="LoginInterfaceController"/>
+            </objects>
+            <point key="canvasLocation" x="-98" y="607"/>
         </scene>
         <!--Static Notification Interface Controller-->
         <scene sceneID="AEw-b0-oYE">
@@ -63,7 +77,7 @@
             <objects>
                 <controller id="gdX-wl-uQE" customClass="NotificationController"/>
             </objects>
-            <point key="canvasLocation" x="462" y="0.0"/>
+            <point key="canvasLocation" x="501" y="0.0"/>
         </scene>
     </scenes>
 </document>
